@@ -242,6 +242,14 @@ DBUser=root
 # Default:
 # CacheUpdateFrequency=60
 
+### Option: StartDBSyncers
+#	Number of pre-forked instances of DB Syncers
+#
+# Mandatory: no
+# Range: 1-64
+# Default:
+# StartDBSyncers=4
+
 ### Option: HistoryCacheSize
 #	Size of history cache, in bytes.
 #	Shared memory size for storing history data.
