@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBXNEXT-325] added StartDBSyncers parameter for parallel writing to DB (Sasha)
  - [ZBX-1906] fixed possibility to add identical checks for discovery (Vedmak)
  - [ZBX-2384] fixed status of triggers elements in screens (Aly)
  - [ZBX-1824] fixed parsing map labels containing item references with user macros (Vedmak)
